Added Gradle Wrapper Props.